API: Add project.viewDetails enpoint
