# api/src/httpd/router.ts
@@ -24,6 +24,7 @@ const send = (res, code: number, response: Response) => {
   res.status(code).json(response);
 };
 
+const apiVersion = "1.0";
 export const createRouter = (
   multichainClient: MultichainClient,
   jwtSecret: string,
@@ -40,7 +41,7 @@ export const createRouter = (
     const intent = req.path.substring(1);
     const body = req.body;
     console.log(`body: ${JSON.stringify(body)}`);
-    if (body.apiVersion !== "1.0") {
+    if (body.apiVersion !== apiVersion) {
       send(res, 412, {
         apiVersion: req.body.apiVersion,
         error: { code: 412, message: `API version ${body.apiVersion} not implemented.` }
@@ -57,7 +58,7 @@ export const createRouter = (
 
     try {
       const response = {
-        apiVersion: "1.0",
+        apiVersion: apiVersion,
         data: await userModel.create(body.data, authorized(req.token, intent))
       };
       send(res, 201, response);
@@ -97,6 +98,8 @@ export const createRouter = (
     }
   });
   router.get("/user.list", async (req, res) => {
+    const intent = req.path.substring(1);
+
     const response = {
       apiVersion: "1.0",
       data: await userModel.list(authorized(req.token, "user.view"))
@@ -108,7 +111,7 @@ export const createRouter = (
     const intent = req.path.substring(1);
     const body = req.body;
     console.log(`body: ${JSON.stringify(body)}`);
-    if (body.apiVersion !== "1.0") {
+    if (body.apiVersion !== apiVersion) {
       send(res, 412, {
         apiVersion: req.body.apiVersion,
         error: { code: 412, message: `API version ${body.apiVersion} not implemented.` }
@@ -126,7 +129,7 @@ export const createRouter = (
     try {
       console.log(body.data);
       const response = {
-        apiVersion: "1.0",
+        apiVersion: apiVersion,
         data: await userModel.authenticate(body.data)
       };
       console.log(response);
@@ -162,7 +165,7 @@ export const createRouter = (
     try {
       const projects = await projectModel.list(authorized(req.token, "project.viewSummary"));
       res.json({
-        apiVersion: "1.0",
+        apiVersion: apiVersion,
         data: {
           items: projects
         }
@@ -175,11 +178,27 @@ export const createRouter = (
       });
     }
   });
+  router.get("/project.viewDetails/:projectId", async (req, res) => {
+    const intent = req.path.split("/")[1];
+    try {
+      const { projectId } = req.params;
+      const project = await projectModel.details(projectId, authorized(req.token, intent));
+      const response = {
+        apiVersion: apiVersion,
+        data: {
+          ...project
+        }
+      };
+      send(res, 200, response);
+    } catch (err) {
+      console.log(err);
+    }
+  });
 
   router.post("/project.create", async (req, res) => {
     const body = req.body;
     console.log(`body: ${JSON.stringify(body)}`);
-    if (body.apiVersion !== "1.0") {
+    if (body.apiVersion !== apiVersion) {
       send(res, 412, {
         apiVersion: body.apiVersion,
         error: { code: 412, message: `API version ${body.apiVersion} not implemented.` }
@@ -203,7 +222,7 @@ export const createRouter = (
         authorized(req.token, intent)
       );
       const response = {
-        apiVersion: "1.0",
+        apiVersion: apiVersion,
         data: id
       };
       send(res, 201, response);
